# ot-harjoitustyo

./: README.md  tuntikirjanpito
dokumentaatio/: aikakirjanpito  aikakirjanpito.md  vaativuusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
projekti/: main.py  traindeck.py  traindeck_test.py  traingenerator.py  traingenerator_test.py
ticket_to_ride_app/: changelog.md  pyproject.toml  tasks.py
ticket_to_ride_app/dokumentaatio/: aikakirjanpito.md  vaativuusmaarittely.md
ticket_to_ride_app/src/: drawdeck.py  main.py  routes.py  traindeck.py  traingenerator.py
ticket_to_ride_app/src/tests/: drawdeck_test.py  routes_test.py  traindeck_test.py  traingenerator_test.py
