[tool.poetry]
name = "unicafe"
version = "0.1.0"
description = ""
authors = ["Tia iskanius"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
